# fosscu-portal-backend

./: .gitignore  Dockerfile  README.md  basic.py  crud.py  data.sqlite  docker-compose.yml  forms.py  main.py  migrations_notes.txt  pyproject.toml  setup.py
migrations/versions/: 07307cb0b433_added_views.py  198044922fe0_added_pupppies_toys_owner.py  26daa5a65d45_added_column_breed.py
src/reputation_fosscu/: constant.py  main.py  schema.py  utils.py
src/reputation_fosscu/templates/: error.html  index.html  results.html
templates/: 404.html  add.html  base.html  delete.html  form.html  form_pass.html  home.html  index.html  info.html  list.html  search.html  thankyou.html  verify_pass.html
