[project]
name = "reputation-fosscu"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Kanishk Pachauri", email = "itskanishkp.py@gmail.com"},
]
dependencies = [
    "fastapi>=0.111.0",
    "httpx>=0.27.0",
    "pyairtable>=2.3.3",
    "python-dotenv>=1.0.1",
    "black>=24.4.2",
    "redis>=5.0.4",
    "jinja2>=3.1.4",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm.scripts]
start = "uvicorn src.reputation_fosscu.main:app --host 0.0.0.0 --port 8080 --workers 4"


[tool.pdm]
distribution = false
